[gd_scene load_steps=9 format=2]

[ext_resource path="res://ObjectBehaviour.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 64 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64, 32 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 34, 36 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 36, 39 )

[node name="Object" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="Single" type="Node2D" parent="."]

[node name="SingleSprite" type="Sprite" parent="Single"]
texture = ExtResource( 2 )

[node name="DoubleH" type="Node2D" parent="."]

[node name="DoubleHSprite1" type="Sprite" parent="DoubleH"]
position = Vector2( 32, 0 )
texture = ExtResource( 2 )

[node name="DoubleHSprite2" type="Sprite" parent="DoubleH"]
position = Vector2( -32, 0 )
texture = ExtResource( 2 )

[node name="DoubleV" type="Node2D" parent="."]

[node name="DoubleVSprite1" type="Sprite" parent="DoubleV"]
position = Vector2( 0, 32 )
texture = ExtResource( 2 )
normal_map = ExtResource( 2 )

[node name="DoubleVSprite2" type="Sprite" parent="DoubleV"]
position = Vector2( 0, -32 )
texture = ExtResource( 2 )

[node name="Quad" type="Node2D" parent="."]

[node name="QuadSprite1" type="Sprite" parent="Quad"]
position = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="QuadSprite2" type="Sprite" parent="Quad"]
position = Vector2( 32, -32 )
texture = ExtResource( 2 )

[node name="QuadSprite3" type="Sprite" parent="Quad"]
position = Vector2( -32, -32 )
texture = ExtResource( 2 )

[node name="QuadSprite4" type="Sprite" parent="Quad"]
position = Vector2( -32, 32 )
texture = ExtResource( 2 )

[node name="SingleCollider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 7 )

[node name="DoubleVCollider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="DoubleHCollider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )

[node name="QuadCollider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )

[node name="SplitBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="DoubleV" type="CollisionShape2D" parent="SplitBox"]
shape = SubResource( 5 )

[node name="DoubleH" type="CollisionShape2D" parent="SplitBox"]
shape = SubResource( 6 )

[node name="Quad" type="CollisionPolygon2D" parent="SplitBox"]
polygon = PoolVector2Array( -33, -68, 29, -68, 30, -26, 67, -26, 68, 23, 32, 23, 33, 66, -32, 67, -31, 24, -69, 24, -69, -29, -32, -27 )
disabled = true

[node name="DivideTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="SplitBox" to="." method="_on_SplitBox_body_entered"]
[connection signal="body_exited" from="SplitBox" to="." method="_on_SplitBox_body_exited"]
[connection signal="timeout" from="DivideTimer" to="." method="_on_DivideTimer_timeout"]
